# phasmo-server

./: .gitignore  Cargo.toml
scripts/: joinlobby.txt  pyvenv.cfg  send  send_command.py
src/: ghost.rs  main.rs  map.rs  server.rs  sim.rs  utils.rs
src/secrets/: cert.pem  keyStore.p12  myKey.pem
