[package]
name = "phasmo_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
futures-channel = "0.3.28"
tokio-tungstenite = "0.20.1"
tokio = { version = "1.33.0", features = ["full"] }
mini-redis = "0.4"
log = "0.4.20"
env_logger = "0.10.0"
